css/style.css
@import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,700');
html,
body {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Quicksand", sans-serif;
    font-size: 62.5%;
    font-size: 10px;
}

.header{
    margin-top: 0px;
    margin-bottom: 0px;
	font-family: 'articoexcond-exlight';
	font-size: 10em;
	color: #000000;
}

/* Navbar section */

.nav {
    background-color: #2A2A2A;
    width: 100%;
    position: fixed;
    line-height: 65px;
    text-align: right;
    border-top-style: solid;
    border-top-width: 5px;
    border-top-color: #003169;
    z-index: 4;
}

.nav div.logo {
    float: left;
    width: auto;
    height: auto;
    padding-left: 3rem;
}

.nav div.logo a {
    text-decoration: none;
    color: #fff;
    font-size: 2.5rem;
}

.nav div.logo a:hover {
    color: #00E676;
}

.nav ul li {
    width: auto;
    height: 65px;
    padding: 0;
    padding-right: 3rem;
}

.nav ul li a {
    text-decoration: none;
    color: #fff;
    line-height: 65px;
    font-size: 2.4rem;
}

.nav ul li a:hover {
    color: #00E676;
}

.navbar-toggler-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0,230,118, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
    color: #00E676;
}

.navbar-toggler {
    border-color: #00E676;
    color: #00E676;
    -webkit-box-shadow: none;
	-moz-box-shadow: none;
	box-shadow: none;
    margin-right: 1em;
}

/* Landing Image section */

#section1 a {
  padding-top: 60px;
}
#section1 a span {
  position: absolute;
  top: 0;
  left: 50%;
  width: 24px;
  height: 24px;
  margin-left: -12px;
  border-left: 1px solid #fff;
  border-bottom: 1px solid #fff;
  -webkit-transform: rotate(-45deg);
  transform: rotate(-45deg);
  box-sizing: border-box;
}

/* Home section */

.parallax { 
	width: 100%;
	height: 75vh;
	background-image: url(../images/UNH_CPTC.jpg);
	background-attachment: fixed;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
}
.divider-line {
    border-bottom-style: solid;
    border-width: 5px;
    width: 100%;
    border-bottom-color: #2A2A2A;
}

.parallax-alt { 
	width: 100%;
	height: 65px;
	background-image: url(../images/UNH_CPTC.jpg);
	background-attachment: fixed;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
}

#site-content {
	min-height: 100%;
	min-height: 100vh;
	padding-top: 5px;
	position: relative;
	z-index: 1;

	-webkit-box-shadow: #000 0 7px 35px 0;
	-moz-box-shadow: #000 0 7px 35px 0;
	box-shadow: #000 0 7px 35px 0;
	
	background: white;
    border-top-style: solid;
    border-width: 15px;
    border-top-color: #2A2A2A;

}

#site-footer {
	padding: 25px 0;
	font-size: 85%;
	background-color: #2A2A2A;
	position: fixed;
	z-index: -1;
	left: 0;
	right: 0;
	bottom: 0;
}
#inner-wrap{
    width: 100vw;
    margin-left: calc((100% - 100vw) / 2);
 }

h1{
    font-size: 6rem;
    word-wrap: break-word;
}
h2{
    font-size: 4rem;
    word-wrap: break-word;
}
h3 {
    font-size: 2.8rem;
    word-wrap: break-word;

}
p,li {
    font-size: 2rem;
    word-wrap: break-word;

}

div.vertCenter {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
}

